--- a/app/static/style.css
+++ b/app/static/style.css
@@ -337,7 +337,7 @@ footer {
 /* Mode desktop besar: dua kolom kiri-kanan */
 @media screen and (min-width: 1200px) {
   .container {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-auto-rows: min-content;
     align-items: start;
   }
