--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1021,10 +1021,19 @@ table.full-width .empty {
   transition: 0.2s ease;
 }
 @media (max-width: 1100px) {
-  .container .masonry {
+  .masonry {
     flex-direction: column !important;
     width:100%;
   }
   
   .masonry .col {width:100%;flex:1}
+  #revenue { order: 4; }
+  #cashflow { order:1; }
+  #emergency { order: 3; }
+  #investment { order: 2; }
+  #income-overview {flex-direction:column}
+  .block-chart {display:flex;width:100%;}
+  .block-chart .left, .block-chart .right{flex: 0 50;min-width: 50%;}
+  #emergency-fund form {flex-wrap: nowrap}
+  .grid2 {display: flex;flex-direction: column;width: 100%;gap: 10px;}
 }
