--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,7 +31,13 @@
       <a class="btn-nav" href="{{ url_for('save_month_snapshot') }}">Rekap Bulanan</a>
       <div class="user-banner">
   <span>👤 {{ session['username'] }}</span>
-  <a href="{{ url_for('logout') }}" class="logout-btn">Logout</a>
+  <a href="{{ url_for('logout') }}" title="Logout" style="margin-left:6px;">
+  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+    <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/>
+    <polyline points="16 17 21 12 16 7"/>
+    <line x1="21" y1="12" x2="9" y2="12"/>
+  </svg>
+</a>
 </div>
     </nav>
   </div>
